# stock_backtest_project

./: .env.example  .gitignore  Procfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
_bmad-output/implementation-artifacts/: 1-1-them-supabase-config-vao-backend-settings.md  1-2-eventbus-replaystatechanged-va-tradecompleted-events.md  1-3-get-api-sessions-danh-sach-parquet-sessions.md  1-4-sessionlistpanel-ui-browse-va-chon-session.md  2-1-get-api-sessions-filename-preview-trade-list-voi-reasoning-templates.md  2-2-exportpreview-component-per-trade-list-voi-scroll-gate.md  2-3-per-trade-reasoning-summary-textarea-voi-auto-save.md  2-4-trades-array-management-trong-exportpanel.md  3-1-post-api-export-write-signal-comparisons-va-signal-cases.md  (+34 more)
backend/: main.py  models.py  settings.py
docs/: project-context.md  user_database
frontend/: ChartController.ts  CoordinateTranslator.ts  DrawingManager.ts  EventBus.ts  ExportHistory.ts  ExportPreview.ts  ExportProgressOverlay.ts  HoverTooltip.ts  IndicatorOverlay.ts  QualityGateBlock.ts  ReplayEngine.ts  ResultsPanel.ts  SessionListPanel.ts  SettingsManager.ts  ToastManager.ts  VolumeOverlay.ts  export_panel.ts  main.ts  types.ts
static/: app.js.map  bundle.js  index.html  style.css
tests/: test_cache.py  test_export.py  test_fetch_pagination.py  test_fetch_route.py  test_ohlcv_gap_detection.py  test_ohlcv_route.py  test_pnl_calculation.py  test_preview.py  test_quality_gate.py  test_replay_hit_detection.py  test_sessions.py  test_settings.py  test_supabase_service.py
(+29 files in other folders)
